docs(content): Update GAME daily report for 2025-09-08

--- a/game/2025/09/08.md
+++ b/game/2025/09/08.md
@@ -1,4 +1,4 @@
-{"content": "# 🎮 游戏行业速递 - 2025年09月08日
+# 🎮 游戏行业速递 - 2025年09月08日
 ## 平台巨头入局AI应用市场：字节跳动与Instagram崛起，「场景+AI」成竞争新焦点
 > **分类：** 市场分析
 > **来源：** [DataEye游戏观察](https://mp.weixin.qq.com/s/dUFVf7lxTQw6ojEFg4kPCw)
@@ -138,4 +138,4 @@
 - [游戏发售与活动前瞻：《无主之地4》、Epic喜加二与多款新游上线](https://mp.weixin.qq.com/s/cvwTdUfbQWLr3gQqvT7pAQ)
 - [腾讯游戏日常任务系统设计困境：连接玩家的挑战](https://mp.weixin.qq.com/s/seP811nE9oErbdQYxDKxNQ)
 - [霞光社「Link」晚宴：TGS 2025前夕的中日韩游戏产业高端对接平台](https://mp.weixin.qq.com/s/4nMxxaP57IV3ZJzw8CCAxA)
-- [9月第二周开测游戏盘点：腾讯《盛世天下》全平台上线，《隐形守护者》推出互动影视新作](https://mp.weixin.qq.com/s/-o_8ALHnZBOxO210ZUGRLQ)"}
+- [9月第二周开测游戏盘点：腾讯《盛世天下》全平台上线，《隐形守护者》推出互动影视新作](https://mp.weixin.qq.com/s/-o_8ALHnZBOxO210ZUGRLQ)
